@@ -82,8 +82,7 @@ FSL_TEST_FUNCTION(ascii) {
             fostlib::ascii_string a("abc", fostlib::ascii_string::encoded));
     std::string str = "x\xbbx";
     FSL_CHECK_EXCEPTION(
-            fostlib::ascii_string a(str),
-            fostlib::exceptions::out_of_range<int>);
+            fostlib::ascii_string a(str), std::domain_error &);
 
     FSL_CHECK_EQ(
             fostlib::coerce<fostlib::json>(fostlib::ascii_string("ab")),
